# gha-cache-server

./: Cargo.toml  Dockerfile  README.md
docs/: configuration.md
migrations/mysql/: 20260423_000001_add_cache_generation_state.sql  20260610_000001_optimize_cache_indexes.sql
migrations/postgres/: 20260423_000001_add_cache_generation_state.sql
migrations/sqlite/: 20260423_000001_add_cache_generation_state.sql  20260610_000001_optimize_cache_indexes.sql
packaging/config/: env
src/: cleanup.rs  db.rs
src/api/: twirp.rs  upload.rs
src/meta/: mod.rs
src/storage/: fs.rs  gcs.rs  mod.rs  s3.rs
tests/: cleanup.rs
