[package]
name = "gha-cache-server"
version = "1.0.0"
edition = "2024"
description = "Self-hosted compatibility server for the GitHub Actions cache API."
license = "MIT"
homepage = "https://github.com/n-cloud-labs/gha-cache-server"
repository = "https://github.com/n-cloud-labs/gha-cache-server"
documentation = "https://github.com/n-cloud-labs/gha-cache-server/tree/main/docs"
readme = "README.md"
default-run = "gha-cache-server"

[dependencies]
anyhow = { version = "1" }
async-trait = { version = "0.1" }
aws-config = { version = "1" }
aws-lc-rs = { version = "1.16" }
aws-sdk-s3 = { version = "1" }
aws-smithy-runtime-api = { version = "1" }
aws-smithy-types = { version = "1" }
axum = { version = "0.8", features = ["macros"] }
base64 = { version = "0.22" }
bytes = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = { version = "0.15" }
futures = { version = "0.3.31" }
google-cloud-auth = { version = "1" }
google-cloud-gax = { version = "1" }
google-cloud-storage = { version = "1" }
http = { version = "1" }
http-body = { version = "1" }
http-body-util = { version = "0.1" }
hyper = { version = "1", features = ["http1", "server"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["aws-lc-rs", "http1", "native-tokio", "tls12"] }
hyper-util = { version = "0.1.6", features = ["client", "client-legacy", "http1", "tokio"] }
libc = { version = "0.2" }
mimalloc = { version = "0.1" }
once_cell = { version = "1" }
percent-encoding = { version = "2" }
pin-project-lite = { version = "0.2" }
prost = { version = "0.14" }
rand = { version = "0.10" }
rsa = { version = "0.9", features = ["sha2"] }
rustls = { version = "0.23.32" }
rustls-native-certs = { version = "0.8" }
rustls-pemfile = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha2 = { version = "0.11" }
sqlparser = { version = "0.61", features = ["visitor"] }
sqlx = { version = "0.8", features = ["any", "chrono", "migrate", "mysql", "postgres", "runtime-tokio", "sqlite", "uuid"] }
sync_wrapper = { version = "1" }
thiserror = { version = "2" }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2" }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
prost-build = { version = "0.14" }

[dev-dependencies]
opendal = { version = "0.55", features = ["services-ghac"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tempfile = { version = "3" }

[features]
default = []
test-util = []

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
